eacer.msoffcryptool-web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: msoffcryptool-web-service
  namespace: default
spec:
  selector:
    app: msoffcryptool-web
  ports:
    - port: 8000
      targetPort: 8000
