eacer.msoffcryptool-web/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: msoffcryptool-web
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docucrypt.xyz.abc`)  # CHANGEME: your real homelab domain
      kind: Rule
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls:
    secretName: homelab-tls
